# mpc-cli

./: .gitignore  CMakeLists.txt  README.md  run.sh  samples.yaml
.claude/: settings.local.json
src/: main.cpp
src/audio-processor/: audio_processor.cpp  audio_processor.h
src/gstreamer/: gst_pipeline.cpp  gst_pipeline.h
src/input/: keyboard_input.h  keyboard_input.mm
src/sequencer/: sequencer.cpp  sequencer.h
src/visualizer/: wave_visualizer.cpp  wave_visualizer.h
